optimized array copy